[gd_scene load_steps=3 format=2]

[ext_resource path="res://OrdersTab.gd" type="Script" id=1]
[ext_resource path="res://OrderFulfillment.tscn" type="PackedScene" id=2]

[node name="OrdersTab" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="OrderContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
size_flags_horizontal = 3

[node name="OrderFulfillment" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
